updated about page, and improved project pages - the image now acts as a link to the live project, it now shrinks properly on all screen sizes where this is needed, and I have likewise removed the actual URL from the links, which both makes the interface more intuitive and stops the URL spilling off the screen on mobile

--- a/static/custom.css
+++ b/static/custom.css
@@ -59,6 +59,12 @@ i.fa-linkedin-square:hover {
     text-align: center;
 }
 
+.link-img {
+    display: block;
+    max-width: 405px;
+    margin: 0 auto;
+}
+
 .main-pic {
     display: block;
     margin: 40px auto;
@@ -133,14 +139,12 @@ i[class^="devicon"].small {
 }
 
 @media screen and (max-width: 768px) {
-
     .nav-justified {
         overflow: hidden;
     }
-
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 550px) {
     .project-intro {
         max-width: 210px;
     }
